# Cpp_DSP_SudokuSolver

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md
include/: config.hpp  dfs.hpp  geometry.hpp  propagation.hpp  scoring.hpp  shoot_ones.hpp  solver.hpp  state.hpp  trail.hpp
puzzles/: repeat2000.txt  repeat_first_5000.txt  sample_hard95.txt
src/: dfs.cpp  geometry.cpp  main.cpp  propagation.cpp  scoring.cpp  solver.cpp  state.cpp  trail.cpp
